# civicmind

./: .env.example  README.md  main.py  pyproject.toml
backend/: .dockerignore  dockerfile  main.py  pyproject.toml
backend/civicmind/: analysis.py  database.py  schemas.py  storage.py  users.py
backend/civicmind/ai/: __init__.py  adapter.py
civicmind/: database.py  gemini.py  schemas.py
frontend/: dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: actions.ts  globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/incidents/: page.tsx
frontend/app/report/: page.tsx
frontend/components/: IncidentMap.tsx  SiteHeader.tsx
frontend/lib/: auth-context.tsx  firebase.ts  image.ts  severity.ts  types.ts
