[project]
name = "civicmind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "google-generativeai>=0.4.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "pillow>=12.3.0",
    "firebase-admin>=7.5.0",
    "httpx>=0.28.1",
    "google-genai>=2.10.0",
    "slowapi>=0.1.10",
]
